# RayTracingTest

./: .gitignore  CMakeLists.txt  build.bat  dockerfile
src/: Main.cpp
